[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "jy"
version = "0.1.17"
description = "Tools to control JS from Python (jy for Js pY or Js python proxY)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = [
    "javascript",
    "python",
    "js",
    "typescript",
    "ast",
    "parsing",
    "code-generation",
    "interop",
]
authors = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "dol",
    "esprima",
]

[project.urls]
Homepage = "https://github.com/i2mint/jy"
Documentation = "https://i2mint.github.io/jy/"
Repository = "https://github.com/i2mint/jy"
Issues = "https://github.com/i2mint/jy/issues"
Changelog = "https://github.com/i2mint/jy/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# TypeScript parsing (jy.ts_parse.parse_ts) -- lazily imported, opt-in.
ts = [
    "tree-sitter",
    "tree-sitter-languages",
]
# AI-assisted TypeScript parsing (jy.ts_parse.parse_ts_with_oa) -- lazily imported, opt-in.
ai = [
    "oa",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "**/*.ipynb",
    ".git",
    ".venv",
    "build",
    "dist",
    "tests",
    "examples",
    "scrap",
]

[tool.ruff.lint]
select = [
    "D100",
]
ignore = [
    "D203",
    "E501",
    "B905",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "D",
]
"**/examples/*" = [
    "D",
]
"**/scrap/*" = [
    "D",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "jy",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
]

[tool.wads.ci]
project_name = "jy"

[tool.wads.ci.commands]
pre_test = []
test = []
post_test = []
lint = []
format = []

[tool.wads.ci.env]
required_envvars = []
test_envvars = []
extra_envvars = []

[tool.wads.ci.env.defaults]

[tool.wads.ci.quality.ruff]
enabled = true

[tool.wads.ci.quality.black]
enabled = false

[tool.wads.ci.quality.mypy]
enabled = false

[tool.wads.ci.testing]
enabled = true
python_versions = [
    "3.10",
    "3.12",
]
pytest_args = [
    "-v",
    "--tb=short",
]
coverage_enabled = true
coverage_threshold = 0
coverage_report_format = [
    "term",
    "xml",
]
exclude_paths = [
    "examples",
    "scrap",
]
test_on_windows = true

[tool.wads.ci.metrics]
enabled = true
config_path = ".github/umpyre-config.yml"
storage_branch = "code-metrics"
python_version = "3.10"
force_run = false

[tool.wads.ci.build]
sdist = true
wheel = true

[tool.wads.ci.publish]
enabled = true
skip_ci_marker = "[skip ci]"
publish_marker = "[publish]"

[tool.wads.ci.docs]
enabled = true
builder = "epythet"
ignore_paths = [
    "tests/",
    "scrap/",
    "examples/",
]
